Fixed header spacing on regular pages and spacing on images in the marketing section of the frontpage when viewed on a smaller screen.

--- a/app/assets/less/components/_component_content.less
+++ b/app/assets/less/components/_component_content.less
@@ -3,6 +3,9 @@
     color: @text-color;
   }
   #content {
+    > header{
+      margin-top: 2rem;
+    }
     //background: @white;
     hr {
       border: 0;
