--- a/app/assets/less/components/_component_content_media.less
+++ b/app/assets/less/components/_component_content_media.less
@@ -26,6 +26,14 @@
     margin-top: 3rem;
     max-width: 100%;
   }
+  #study{
+    img,
+    video,
+    object,
+    iframe {
+      margin-top: 0;
+    }
+  }
   .article-single {
     img {
       height: auto;
